Upgrade to Java 21 with Maven 3.9.9
- Update compiler source/target to Java 21 (release flag)
- Update maven-compiler-plugin to 3.13.0
- Update maven-javadoc-plugin 3.0.0 -> 3.8.0 (report-runners)
- Update maven-deploy-plugin 2.7 -> 3.1.2
- Update site-maven-plugin 0.10 -> 0.12
- Update wagon-ftp 2.4 -> 3.5.3
- Update javadoc config to reference Java 21 docs
- Fix deprecated-for-removal Float constructor in EJHtmlMarkupProcessor
- Add Maven wrapper (3.9.9) to both modules